Z-Index Corrections

--- a/css/smallScreenNav.css
+++ b/css/smallScreenNav.css
@@ -53,7 +53,7 @@ li {
   bottom: 20px; */
   right: 20px;
   bottom: 50%;
-  z-index: 999;
+  z-index: 1002;
   font-size: 50px;
 }
 .button a {
@@ -92,7 +92,7 @@ li {
   width: 100%;
   background: rgba(20, 20, 20, 0.8);
   overflow: auto;
-  z-index: 99;
+  z-index: 1001;
 }
 .wrap {
   color: #e9e9e9;
